--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@ p {
 }
 
 a {
-  color: #f64b4b;
+  color: #12556b;
   text-decoration: none;
   transition: color 0.3s ease;
 }
@@ -478,11 +478,14 @@ textarea {
 
 .hero-block {
   margin: 65px 0 0;
+  max-width: 1650px;
+  
+  margin: auto;
 }
 
 .hero-block .carousel-item:before {
   content: '';
-  background: rgba(0, 0, 0, 0.7);
+  /* background: rgba(0, 0, 0, 0.7); */
   position: absolute;
   top: 0;
   bottom: 0;
@@ -492,6 +495,9 @@ textarea {
 
 .hero-block .carousel-item img {
   width: 100%;
+  max-height: 640px;
+  /* object-fit: contain; */
+  border-radius: 20px;
 }
 
 .hero-block .carousel-caption {
@@ -959,6 +965,27 @@ textarea {
   font-size: 40px;
   margin: 0 0 15px;
   color: #12556b;
+}
+
+/* .startUp-block body{
+  background-color: rgb(12, 12, 12);
+} */
+.startUp-block img {
+  border-radius: 16px;
+}
+
+.startUp-block span {
+  color: #9c0c90;
+}
+
+.startUp-block p {
+  font-size: 30px;
+  
+ 
+}
+
+.startUp-block h2 {
+  font-size: 50px;
 }
 
 @media only screen and (min-width: 1025px) {
