--- a/src/App.css
+++ b/src/App.css
@@ -461,6 +461,7 @@ textarea {
   padding: 50px 0;
   color: #fff;
   text-align: center;
+  margin-top: 150px;
 }
 
 #footer .copyright {
@@ -478,6 +479,7 @@ textarea {
 
 .hero-block {
   margin: 65px 0 0;
+  margin-top: 150px !important;
   max-width: 1650px;
   
   margin: auto;
